customizing working site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>{{ page.title }}</title>
-    
+
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-  
+
   </head>
 
 
@@ -13,7 +13,7 @@
 <ul>
 <li><a href="/">Home</a></li>
 <li><a href="/about">About</a></li>
-<li><a href="/cv">CV</a></li>
+<li><a href="/creations">Creations</a></li>
 <li><a href="/blog">Blog</a></li>
 </ul>
     </nav>
@@ -22,11 +22,11 @@
   {{ content }}
 
 </div>
-  
+
   <footer>
    <ul>
-   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+   <li><a href="mailto:clesiemo3@gmail.com">email</a></li>
+   <li><a href="https://github.com/clesiemo3">github.com/clesiemo3</a></li>
    </ul>
   </footer>
   </body>
