new post and general tweaks to site

--- a/css/style.scss
+++ b/css/style.scss
@@ -4,8 +4,8 @@
 @import '../_sass/syntax-highlighting';
 
 
-$scotch-primary: rgb(255, 69, 69);
-$scotch-secondary: #FF7B7B;
+$scotch-primary: rgb(102, 153, 255);
+$scotch-secondary: #0088cc;
 
 %oswald { font-family: 'Oswald', sans-serif; }
 %roboto { font-family: 'Roboto Condensed', sans-serif; }
