--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,11 @@
             <div class="row">
                 <div class="col-md-12">
                     <p class="text-muted">{{ site.data.global.footer_text }}</p>
+                    Share on Twitter! <a href="https://twitter.com/share?url={{ site.url }}{{ page.url }}&amp;text={{ page.title }}"
+                      title="Share on Twitter" class="button">
+                      <span class="count count-twitter">0</span>
+                      <i class="fa fa-twitter notranslate" aria-hidden="true"></i>
+                    </a>
                 </div>
             </div>
         </div>
