--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 
     <footer class="site-footer">
-        <div class="container">
+        <div class="container" style="text-align: center">
             <div class="row">
                 <div class="col-md-12">
                     <p class="text-muted">{{ site.data.global.footer_text }}</p>
